--- a/assets/sass/misc/_code-blocks.scss
+++ b/assets/sass/misc/_code-blocks.scss
@@ -92,8 +92,8 @@ div.toolbar {
         }
 
         &.copy {
-            right: -3rem;
-            top: -.6rem;
+            right: 0;
+            top: 0;
             width: 3rem;
         }
 
